# ES_PCS_2026

./: PrimoFile  primoFileLocale.txt
esercitazione1/: CMakeLists.txt
esercitazione1/build_es1/: CMakeCache.txt  Makefile  cmake_install.cmake  medie  medie.cpp  printargs  printargs.cpp
esercitazione2/: CMakeLists.txt  osservazioni.txt
esercitazione2/build_es2/: CMakeCache.txt  Makefile  cmake_install.cmake  es1_posizionamento.cpp  es2_bubblesort.cpp  es2_primi_algoritmi.cpp
esercitazione3/: CMakeLists.txt
esercitazione3/build_es3/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  rational.hpp
esercitazione4/: CMakeLists.txt
esercitazione4/build_es4/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  codice_grafici.ipynb  measure_sorts.cpp  sort.hpp  tempi_ordinamento.csv  test_bubblesort.cpp  test_insertionsort.cpp  test_selectionsort.cpp
esercitazione4/build_es4/Testing/Temporary/: CTestCostData.txt
